--- a/ExpensesControlApp/appsettings.json
+++ b/ExpensesControlApp/appsettings.json
@@ -8,5 +8,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ClientValidationEnabled": "true",
+  "UnobtrusiveJavaScriptEnabled": "true"
 }
