Added ViewModels for the existing Models. Configured server and client side validation

--- a/ExpensesControlApp/ExpensesControlApp.csproj
+++ b/ExpensesControlApp/ExpensesControlApp.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Bootstrap.Datepicker" Version="1.8.0.1" />
     <PackageReference Include="Bootstrap.v3.Datetimepicker.CSS" Version="4.17.49" />
+    <PackageReference Include="DataAnnotationsExtensions" Version="5.0.1.27" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
     <PackageReference Include="jQuery" Version="3.6.0" />
     <PackageReference Include="jQuery.UI.Combined" Version="1.13.1" />
@@ -21,7 +22,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.2" />
-    <PackageReference Include="Moment.js" Version="2.29.1" />
+    <PackageReference Include="Moment.js" Version="2.29.2" />
   </ItemGroup>
 
   <ItemGroup>
